kubernetes/test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exam-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: exam-api-mysql-pod  # The Deployment will manage Pods with this label
  template:
    metadata:
      labels:
        app: exam-api-mysql-pod  # Ensure Pods have the correct label to match the Service selector
    spec:
      containers:
        # FASTAPI container       
        - name: api-container
          image: tybaloo/kubernetes-exam-image:latest 
          ports:
            - containerPort: 8000
        - name: mysqldb      
          image: datascientest/mysql-k8s:1.0.0        
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysqldb-volume-1  # Fixed the volume name to match "volumes" section
            - mountPath: /etc/mysql/conf.d
              name: mysqldb-config-volume-kubernetes-exam  # Ensure this is the correct MySQL config path
      volumes:
        - name: mysqldb-volume-1  # Fixed to match the mountPath reference
          emptyDir: {}
        - name: mysqldb-config-volume-kubernetes-exam
          configMap:
            name: mysqldb-config-kubernetes-exam # Reference the configMap containing max_allowed_packet.cnf
